# aigent

./: README.md  config.py  main.py  pyproject.toml  tests.py
calculator/pkg/: calculator.py  render.py
common/: errors.py
functions/: get_file_content.py  get_files_info.py
