[project]
name = "aigent"
version = "0.1.0"
description = "A toy version of Claude Code using Google's free Gemini API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.0",
]
